--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -2,7 +2,7 @@
 
 <div class='container'>
 
-<p class='text-muted'>&copy; 2015 Srvup Project</p>
+<p class='text-muted'>&copy; NH98 Project</p>
 
 </div>
 
