--- a/src/templates/accounts/account_login_register.html
+++ b/src/templates/accounts/account_login_register.html
@@ -26,7 +26,7 @@
 {% if title == "Login" %}
 <br/>
 <p>
-Need Account? <a href='{% url "register" %}'>Register now</a>.
+<!-- Need Account? <a href='{% url "register" %}'>Register now</a>.
 </p>
 {% endif %}
 
