--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -9,7 +9,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">srvup</a>
+          <a class="navbar-brand" href="/">NH98</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -17,7 +17,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
           {% if user.is_authenticated %}
-           
+
               <li class="dropdown">
               <a href="#" class="dropdown-toggle notification-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class='glyphicon glyphicon-inbox' aria-hidden="true"></span> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu" id='notification_dropdown'>
